--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -24,8 +24,13 @@
                 <div class="col-2">
                     {% if app.user %}
                     <a href="{{ path('articles_edit', {'id': article.id}) }}" class="btn btn-dark">
-                        Modifier le texte de cette page
+                        Modifier le texte
                     </a>
+                        {% for role in app.user.roles %}
+                            {% if role == 'ROLE_ADMIN' %}
+                                {{ include('articles/_delete_form.html.twig') }}
+                            {% endif %}
+                        {% endfor %}
                     {% endif %}
                     <img src="{{ asset('images/porte-plume.png') }}" alt="Porte-Plume" id="porteplume" />
                 </div>
