--- a/templates/journaux/_delete_form.html.twig
+++ b/templates/journaux/_delete_form.html.twig
@@ -1,5 +1,6 @@
-<form method="post" action="{{ path('journaux_delete', {'id': journaux.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('journaux_delete', {'id': journaux.id}) }}"
+      onsubmit="return confirm('La suppression de ce journal sera effective seulement s\'il est vide');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ journaux.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Supprimer ce journal</button>
 </form>
