Sorting journaux and articles by date

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -9,7 +9,7 @@
             <div class="offset-1 col-9">
                 <p class="text-presentation">
                     Maman a écrit son journal de bord depuis son mariage jusqu'à son décès en 2014. Cette plateforme
-                    a pour but de partager à la famille proche et de numériser tous ces écrits.
+                    a pour but de partager à la famille proche et de numériser tous ses écrits.
                 </p>
             </div>
         </div>
