--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -45,10 +45,15 @@
             </div>
         </div>
         <div class="row p-3">
-            <div class="offset-2 col-3 text-right">
+            <div class="offset-2 col-3 text-right marker">
+                Statut du compte :
             </div>
-            <div class="col-5 lead">
-
+            <div class="col-2 lead">
+                {% if user.isValidated == false %}
+                <p class="bg-warning p-1">En attente</p>
+                {% else %}
+                <p class="bg-success p-1">Validé</p>
+                {% endif %}
             </div>
         </div>
     </main>
