--- a/templates/emails/inscription.html.twig
+++ b/templates/emails/inscription.html.twig
@@ -1,16 +1,16 @@
-<h1>Bonjour {{ email.toName }}!</h1>
+<p>Bonjour cher administrateur,</p>
 
 <p>
     Un utilisateur a demandé de s'inscrire au Journal de Maman.
-    Il s'agit de :
-    - {{ user.firstname }} {{ user.name }}
-    - mail : {{ user.email }}
-    - Lien : {{ user.link }}
-    - Pass : {{ user.password }}
-</p>
+    Il s'agit de :</p>
+<ul>
+    <li>{{ user.firstname }} {{ user.name }}</li>
+    <li>Mail : {{ user.email }}</li>
+    <li>Lien : {{ user.link }}</li>
+</ul>
 <p>
-    L'utilisateur doit être approuvé sur me panel d'administration :
+    L'utilisateur doit être approuvé sur le panel d'administration :
     http://journal.jejoueenclasse.fr/admin/
 </p>
---
+--<br>
 Jean-Roch
