--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -115,6 +115,7 @@ body {
 
     .bureau {
         display: flex;
+        flex-flow: row wrap;
 
         :hover {
             -webkit-transition: all 0.5s ease;
