--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,16 +5,7 @@
 {% block body %}
     <main class="container">
         <div class="row d-flex mt-4">
-            <div class="col-5">
-                <h3>Demander un accès</h3>
-                <a href="{{ path('app_register')}}" class="btn btn-lg btn-primary">
-                    Remplir le formulaire
-                </a>
-            </div>
-            <div class="col-2">
-                ou
-            </div>
-            <div class="col-5">
+            <div class="col-md-5">
                 <form method="post">
                     {% if error %}
                         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -50,6 +41,15 @@
                         Se connecter
                     </button>
                 </form>
+            </div>
+            <div class="col-2">
+                ou
+            </div>
+            <div class="col-md-5">
+                <h3>Demander un accès</h3>
+                <a href="{{ path('app_register')}}" class="btn btn-lg btn-primary">
+                    Remplir le formulaire
+                </a>
             </div>
         </div>
     </main>
