Modify name for lastname

--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -25,7 +25,7 @@
                 Nom :
             </div>
             <div class="col-5 lead">
-                {{ user.name }}
+                {{ user.lastname }}
             </div>
         </div>
         <div class="row p-3">
