--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,10 +16,10 @@
         </div>
         <div class="row p-1">
             <div class="col-4 text-right">
-                {{ form_label(registrationForm.name) }}
+                {{ form_label(registrationForm.lastname) }}
             </div>
             <div class="col-4">
-                {{ form_widget(registrationForm.name) }}
+                {{ form_widget(registrationForm.lastname) }}
             </div>
         </div>
         <div class="row p-1">
