--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -35,6 +35,16 @@
                     <img src="{{ asset('images/porte-plume.png') }}" alt="Porte-Plume" id="porteplume" />
                 </div>
             </div>
+            <div class="row justify-content-center my-3">
+                {% if article.ajouteur %}
+                <p class="text-center">
+                    Article ajouté par {{ article.ajouteur.firstname}} {{ article.ajouteur.lastname}} le {{ article.ajoutdate|date("d/m/Y") }}
+                    {% if article.modifdate %}
+                        ,<br>édité par Sylvain Masson le {{ article.modifdate|date("d/m/Y") }}
+                    {% endif %}
+                    .</p>
+                {% endif %}
+            </div>
         </div>
         <div id="scroll_to_top">
             <a href="#top"><img src="{{ asset('images/scrolltop.png') }}" alt="Retourner en haut" /></a>
