resolve bug in admin (lake of lastname)

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -21,7 +21,7 @@
                 {% else %}
                     <p class="bg-success p-1">Autorisé</p>
                 {% endif %}
-                <p class="marker">{{waiter.firstname}} {{waiter.name}}</p>
+                <p class="marker">{{waiter.firstname}} {{waiter.lastname}}</p>
                 {{waiter.email}}
                 </p>
             </div>
