--- a/templates/articles/new.html.twig
+++ b/templates/articles/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Ajouter une page de journal{% endblock %}
 
 {% block body %}
-    <main class="carrousel p-3">
+    <main class="article p-3">
         <h1>Ajout d'une page au journal</h1>
 
                     {{ include('articles/_form.html.twig') }}
