--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -35,14 +35,23 @@
                     <img src="{{ asset('images/porte-plume.png') }}" alt="Porte-Plume" id="porteplume" />
                 </div>
             </div>
-            <div class="row justify-content-center my-3">
+            <div class="row justify-content-center mt-3">
+                <p class="text-center">Texte écrit par
+                {% if article.auteur %}
+                    {{ article.auteur }}
+                    {% else %}
+                    Geneviève Masson
+                {% endif %}
+                </p>
+            </div>
+            <div class="row justify-content-center">
                 {% if article.ajouteur %}
                 <p class="text-center">
                     Article ajouté par {{ article.ajouteur.firstname}} {{ article.ajouteur.lastname}} le {{ article.ajoutdate|date("d/m/Y") }}
                     {% if article.modifdate %}
-                        ,<br>édité par Sylvain Masson le {{ article.modifdate|date("d/m/Y") }}
+                        ,<br>édité par {{ article.modifieur.firstname}} {{ article.modifieur.lastname}} le {{ article.modifdate|date("d/m/Y") }}
                     {% endif %}
-                    .</p>
+                    </p>
                 {% endif %}
             </div>
         </div>
