--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -183,6 +183,7 @@ body {
         width: 200px;
         margin-left: -60px;
         padding-top: 70px;
+        padding-right: 5px;
     }
 
     @media(max-width: 1100px) {
@@ -191,13 +192,41 @@ body {
         }
     }
 
-        .fond-paper {
-        background-image:url('../../public/images/paperwhite.jpg');
-        -moz-box-shadow: 3px -3px 20px 5px #656565;
-        -webkit-box-shadow: 3px -3px 20px 5px #656565;
-        -o-box-shadow: 3px -3px 20px 5px #656565;
-        box-shadow: 3px -3px 20px 5px #656565;
-        filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=45, Strength=20);
+    .icon-nav-sommaire {
+        position: absolute;
+        height: 30px;
+        top: 10px;
+        right: 10px;
+    }
+
+    .icon-nav-gauche {
+        position: absolute;
+        height: 40px;
+        top: 10px;
+        left: 20px;
+    }
+
+    .icon-nav-droite {
+        position: absolute;
+        height: 40px;
+        top: 10px;
+        right: 20px;
+    }
+
+    .icon-coeur {
+        position: absolute;
+        height: 50px;
+        top: 10px;
+        right: 20px;
+    }
+
+    .fond-paper {
+    background-image:url('../../public/images/paperwhite.jpg');
+    -moz-box-shadow: 3px -3px 20px 5px #656565;
+    -webkit-box-shadow: 3px -3px 20px 5px #656565;
+    -o-box-shadow: 3px -3px 20px 5px #656565;
+    box-shadow: 3px -3px 20px 5px #656565;
+    filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=45, Strength=20);
 
         .text-article {
             font-size: 1.6rem;
