Adding previous and next on article page

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -213,6 +213,20 @@ body {
         right: 20px;
     }
 
+    .icon-nav-gauche-bas {
+        position: absolute;
+        height: 40px;
+        bottom: 10px;
+        left: 20px;
+    }
+
+    .icon-nav-droite-bas {
+        position: absolute;
+        height: 40px;
+        bottom: 10px;
+        right: 20px;
+    }
+
     .icon-coeur {
         position: absolute;
         height: 50px;
