--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="offset-1 col-9">
                 <p class="text-presentation">
-                    Maman a écrit son journal de bord depuis son mariage jusqu'à son décès en 2014. Cette plateforme
+                    Maman a écrit son journal de bord de 1955 à 2014. <br>Cette plateforme
                     a pour but de partager à la famille proche et de numériser tous ses écrits.
                 </p>
             </div>
