Count and show on index number of contributors

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -38,6 +38,16 @@
                         <h5 class="card-title">Statistiques</h5>
                         <p>{{ totalJournaux }} journaux</p>
                         <p>{{ totalArticles }} pages</p>
+                        <p>{{ totalContribs }} contributeurs</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 m-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h5 class="card-title">Ils ont ajouté des pages au journal</h5>
+                        <p>{{ totalJournaux }} journaux</p>
+                        <p>{{ totalArticles }} pages</p>
                     </div>
                 </div>
             </div>
