--- a/templates/search/search.html.twig
+++ b/templates/search/search.html.twig
@@ -8,22 +8,25 @@
         <div class="row">
             <div class="offset-1 col-9">
                 {{ form_start(form) }}
-                {{ form_widget(form) }}
-                <button class="btn">{{ button_label|default('Chercher') }}</button>
+                {{ form_widget(form, {'attr': {'size':'30'}}) }}
+                <button class="btn btn-success m-2">{{ button_label|default('Chercher') }}</button>
                 {{ form_end(form) }}
-                <p class="text-presentation">
-                    Cherchez un terme dans les pages du journal.</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row p-4">
             <div class="offset-1 col-9">
                 {% if articles is defined %}
-                    "{{ search }}" apparaît sur ces pages :<br>
-                    {% for article in articles %}
-                        <a href="{{ path('articles_show', {id: article.id}) }}" alt="{{ article.jour|date('d/m/Y') }}">
-                            Page du {{ article.jour|date('d/m/Y') }}
-                        </a><br>
-                    {% endfor %}
+                    <h4>
+                    {% if articles is empty %}
+                        Aucun résultat pour cette recherche, essayez un autre terme.</h4>
+                    {% else %}
+                        "{{ search }}" apparaît sur ces pages :</h4><br>
+                        {% for article in articles %}
+                            <a href="{{ path('articles_show', {id: article.id}) }}" alt="{{ article.jour|date('d/m/Y') }}">
+                                {{ article.jour|date('d/m/Y') }}
+                            </a><br>
+                        {% endfor %}
+                    {% endif %}
                 {% endif %}
             </div>
         </div>
