--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,6 @@
                     <div class="navbar-nav">
                         <a href="{{ path('journaux_index') }}" class="pl-5 nav-item nav-link active">Les journaux</a>
                         <a href="{{ path('articles_index') }}" class="pl-5 nav-item nav-link active">Au jour le jour</a>
-                        {#<a href="{{ path('articles_show', {id: random(1,10)}) }}" class="pl-5 nav-item nav-link active">Une journée au hasard</a>#}
                     </div>
                     <div class="navbar-nav ml-auto">
                         {% if app.user %}
@@ -32,6 +31,11 @@
                                 <a href="{{ path('admin_index') }}" class="pr-5 nav-item nav-link active">admin</a>
                             {% endif %}
                             <a href="{{ path('user_show', {id: app.user.id}) }}" class="pr-5 nav-item nav-link active">Bienvenue {{ app.user.firstname }}</a>
+                            {% if app.user.roles[0] == "ROLE_LECTOR" or app.user.roles[0] == "ROLE_ADMIN" %}
+                            <a href="{{ path('search') }}" class="pl-5 nav-item nav-link active">
+                                <img src="{{ asset('images/loupe.png') }}" title="Recherche" style="height: 25px;">
+                            </a>
+                            {% endif %}
                         {% else %}
                             <a href="{{ path('app_login') }}" class="nav-item nav-link active">Se connecter</a>
                         {% endif %}
