--- a/templates/search/search.html.twig
+++ b/templates/search/search.html.twig
@@ -9,7 +9,7 @@
             <div class="offset-1 col-9">
                 {{ form_start(form) }}
                 {{ form_widget(form, {'attr': {'size':'30'}}) }}
-                <button class="btn btn-success m-2">{{ button_label|default('Chercher') }}</button>
+                <button class="btn btn-dark m-2">{{ button_label|default('Chercher') }}</button>
                 {{ form_end(form) }}
             </div>
         </div>
