--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -92,13 +92,28 @@
                 <div class="col-md-2">
                 </div>
             </div>
-            <div class="row justify-content-center">
+            <div class="row border p-3">
+                <div class="col-md-2">
+                    Commentaires
+                </div>
+                <div class="col-md-8 fond-paper p-2">
+                    {% for commentaire in article.commentaires %}
+                        <p class="text-secondary">
+                            Message de {{ commentaire.auteurcom.firstname }} écrit le {{ commentaire.datecom|date("d/m/Y") }}
+                        </p>
+                        <p class="text-article">{{ commentaire.com }}</p>
+                    {% else %}
+                        Aucun commentaire sur cette page, ajoutez-en un !
+                    {% endfor %}
+                </div>
                 <div class="col-md-2">
                 </div>
-                <div class="col-md-1">
+            </div>
+            <div class="row p-3">
+                <div class="col-md-2">
                 </div>
-                <div class="col-md-7">
-
+                <div class="col-md-8">
+                    Ajouter un commentaire :
                 </div>
                 <div class="col-md-2">
                 </div>
