Resolve flex bug for journaux index

--- a/templates/journaux/_delete_form.html.twig
+++ b/templates/journaux/_delete_form.html.twig
@@ -2,5 +2,5 @@
       onsubmit="return confirm('La suppression de ce journal sera effective seulement s\'il est vide');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ journal.id) }}">
-    <button class="btn btn-danger">Supprimer ce journal</button>
+    <button class="btn btn-danger m-1">Supprimer ce journal</button>
 </form>
