--- a/templates/journaux/index.html.twig
+++ b/templates/journaux/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Les journaux en ligne{% endblock %}
 
 {% block body %}
-    <main class="journaux">
+    <main class="journal journaux">
         <h1 class="p-3">Les journaux en ligne</h1>
         <div class="bureau">
             {% set n = 1 %}
