--- a/templates/journaux/show.html.twig
+++ b/templates/journaux/show.html.twig
@@ -29,10 +29,10 @@
         </div>
         <div class="row justify-content-end pr-5">
             {% if app.user %}
-                <a href="{{ path('articles_new', {'journal': journal.id}) }}" class="btn btn-success mr-3">
+                <a href="{{ path('articles_new', {'journal': journal.id}) }}" class="btn btn-success m-1 mr-3">
                     Ajouter une page
                 </a>
-                <a href="{{ path('journaux_edit', {'id': journal.id}) }}" class="btn btn-dark mr-3">
+                <a href="{{ path('journaux_edit', {'id': journal.id}) }}" class="btn btn-dark m-1 mr-3">
                     Editer les informations de ce journal
                 </a>
                 {% for role in app.user.roles %}
