--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,22 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Réinitialisation du mot de passe{% endblock %}
 
 {% block body %}
     {% for flashError in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+    <div class="col-12 text-center text-presentation">
+        <h1>Réinitialisation du mot de passe</h1>
 
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
-        <div>
-            <small>
-                Enter your email address and we we will send you a
-                link to reset your password.
-            </small>
-        </div>
+        <p>Vous recevrez un lien pour choisir un nouveau mot de passe.
+        <br>Entrez votre adresse mail :</p>
 
-        <button class="btn btn-primary">Send password reset email</button>
-    {{ form_end(requestForm) }}
+        {{ form_start(requestForm) }}
+            {{ form_row(requestForm.email) }}
+
+            <br><button class="btn btn-primary">Envoyer mon mail de réinitialisation</button>
+        {{ form_end(requestForm) }}
+    </div>
 {% endblock %}
