--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,6 +40,7 @@
                     <button class="btn btn-lg btn-success" type="submit">
                         Se connecter
                     </button>
+                    <p class="pt-3"><a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a></p>
                 </form>
             </div>
             <div class="col-2">
