--- a/templates/documents/new.html.twig
+++ b/templates/documents/new.html.twig
@@ -1,11 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Documents{% endblock %}
+{% block title %}Ajouter un document ou une photo{% endblock %}
 
 {% block body %}
-    <h1>Create new Documents</h1>
+    <main class="article p-3">
+        <div class="row justify-content-center">
+            <div class="col-12 text-center">
+                <h1>Photos ou PDF</h1>
+                <p class="text-presentation">Choisissez un ou plusieurs documents (maintenir appuyé sur CTRL pour sélectionner plusieurs fichiers)</p>
 
-    {{ include('documents/_form.html.twig') }}
+                    {{ include('documents/_form.html.twig') }}
 
-    <a href="{{ path('documents_index') }}">back to list</a>
+                <p>Formats acceptés :<br>
+                - images : jpg, jpeg, png<br>
+                - documents : PDF</p>
+            </div>
+        </div>
+    </main>
 {% endblock %}
